Update 0.1.3
    Added 10 Games:
        - Backflip 3D
        - Car Simulator
        - Gimme The Airpod
        - Soldier Legend
        - Stack Bump 3D
        - Stickman Dismount
        - Temple Run 2
        - The Heist
    Fixed:
        - Make it Meme
        - Krunker