@@ -1,0 +1,44 @@
+<!DOCTYPE html>
+<head>
+<link rel="icon" type="image/x-icon" href="/images/favicon.png">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/css/style.css">
+<link rel="stylesheet" href="/css/dropdown.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<script src="/js/main.js"></script>
+<script src="/js/dropdown.js"></script>
+<style>
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+</style>
+</head>
+<title>Classes</title>
+
+<div class="header">
+  <a href="https://spew45.github.io" style="text-decoration: none;"><h1 style="color: #fff; font-family: 'Poppins', sans-serif;">Spew45</h1></a>
+  <p style="font-family: Arial;">The best website for all your unblocked games with over 50+ popular 
+unblocked games!</p>
+</div>
+
+<div class="border"></div>
+
+<div class="dropdown" style="float:right;">
+  <button onclick="myFunction()" class="dropbtn"><span class="icon"><ion-icon class="i" name="settings-sharp"></ion-icon></span></button>
+  <div id="myDropdown" class="dropdown-content">
+    <a onclick="openFullscreen();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;">Fullscreen</a>
+    <a onclick="openGame();" style="cursor: pointer; font-family: 'Poppins', sans-serif; text-decoration: none;" target="_parent">Cloak Link</a>
+    <a href="https://www.google.com/?safe=active&ssui=on" target="_parent" style="font-family: 'Poppins', sans-serif;">Panic</a>
+  </div>
+</div>
+
+<div class="text">
+<embed src="/dump/text.html">
+</div>
+
+<p align="center"><iframe src="https://just-fall.github.io/file/" id="iframe"></iframe></p>
+
+<script src="/js/test.js"></script>
