@@ -39,6 +39,6 @@ unblocked games!</p>
 <embed src="/dump/text.html">
 </div>
 
-<p align="center"><iframe src="https://makeitmeme.com/en/" id="iframe"></iframe></p>
+<p align="center"><iframe src="https://just-fall.github.io/j99/make-it-meme" id="iframe"></iframe></p>
 
 <script src="/js/test.js"></script>
